# tray

./: .bazelrc  .gitignore  .scalafmt.conf  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-testlogs  bazel-tray  build.sbt  dependencies.bzl  dependencies.yaml  index.html  intellij.bazelproject  intro.html  make_bloop.sh  maven_install.json  scala-version.sh  scala_version.bzl  third_party.bzl  write_bloop_config.py
.ijwb/: .bazelproject
docs/: someother.html
docs/gcs/: downloading.html  index.html  settingup.html  uploading.html
gcs/: BUILD.bazel
gcs/src/main/scala/tray/: BUILD.bazel  GCSItem.scala
gcs/src/main/scala/tray/api/: BUILD.bazel  GCSStorage.scala  GCStorage.scala  Objects.scala  RequestUtil.scala
gcs/src/main/scala/tray/auth/: BUILD.bazel  TokenDispenser.scala
gcs/src/main/scala/tray/batch/: BUILD.bazel  Batch.scala
gcs/src/main/scala/tray/core/: BUILD.bazel  GCSItem.scala  StorageEndpoints.scala
gcs/src/main/scala/tray/params/: ACLFilter.scala  BUILD.bazel  ListFilter.scala  WatchAll.scala
gcs/src/main/scala/tray/serde/: BUILD.bazel  Compose.scala  ListingResponse.scala  ObjectACL.scala  ObjectMetadata.scala  PartialObjectMetadata.scala  Rewrite.scala  UpdateMetadata.scala
gcs/src/main/scala/tray/underlying/: Batch.scala  BatchRunner.scala  RequestUtil.scala  StorageEndpoints.scala
gcs/src/test/scala/tray/: BUILD.bazel  Blabla.scala  ComposeTest.scala  ParallelPutAndGet.scala  SharedStorage.scala  SimpleIO.scala
gcs/src/test/scala/tray/streamed/: BUILD.bazel  StreamRangeTest.scala
project/: Dependencies.scala  Settings.scala  microsite.sbt
root/src/main/scala/: Main.scala
root/src/main/scala/tray/: Main.scala
site/src/main/mdoc/: index.md  intro.md
site/src/main/mdoc/docs/: someother.md
site/src/main/mdoc/docs/gcs/: downloading.md  index.md  settingup.md  uploading.md
site/src/main/resources/microsite/data/: menu.yaml
src/: BUILD.bazel
src/main/scala/tray/: BUILD.bazel  BlobMetadata.scala  BlobStore.scala  ErrorHandling.scala  Objects.scala  ObjectsAPI.scala  StoragePath.scala  objects.scala
src/main/scala/tray/auth/: BUILD.bazel  GCSAuth.scala
src/main/scala/tray/endpoints/: BUILD.bazel  Endpoints.scala
src/main/scala/tray/errors/: BUILD.bazel  TrayError.scala
src/test/scala/tray/: BUILD.bazel  BatchTest.scala  InsertGetTest.scala  ResumableGetTest.scala  ResumablePutTest.scala  SimplePutGetTest.scala  TestUtil.scala
toolchains/: BUILD.bazel
tools/build_rules/: prelude_bazel
