load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")

scala_library(
    name = "tray",
    srcs = glob(["*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        #fs2
        "@maven//:co_fs2_fs2_core_2_13",

        #CE
        "@maven//:org_typelevel_cats_kernel_2_13",
        "@maven//:org_typelevel_cats_core_2_13",
        "@maven//:org_typelevel_cats_effect_kernel_2_13",
        "@maven//:org_typelevel_cats_effect_2_13",

        #http4s
        "@maven//:org_http4s_http4s_core_2_13",
        "@maven//:org_http4s_http4s_client_2_13",
        "@maven//:org_typelevel_vault_2_13",

        "//src/main/scala/tray/auth",
        "//src/main/scala/tray/endpoints",
        "//src/main/scala/tray/errors",
    ],
)
