load("@io_bazel_rules_scala//scala:scala.bzl", "scala_junit_test")
load("//:dependencies.bzl", "add_scala_ver")

scala_junit_test(
    name = "tray",
    srcs = glob(["*.scala"]),
    suffixes = ["Test"],
    deps = [
        #CE
        add_scala_ver("@maven//:org_typelevel_cats_kernel"),
        add_scala_ver("@maven//:org_typelevel_cats_core"),
        add_scala_ver("@maven//:org_typelevel_cats_effect_kernel"),
        add_scala_ver("@maven//:org_typelevel_cats_effect"),
        add_scala_ver("@maven//:org_typelevel_cats_effect_std"),

        #fs2
        add_scala_ver("@maven//:co_fs2_fs2_core"),
        add_scala_ver("@maven//:org_scodec_scodec_bits"),

        #http4s
        add_scala_ver("@maven//:org_http4s_http4s_jdk_http_client"),
        add_scala_ver("@maven//:org_http4s_http4s_core"),
        add_scala_ver("@maven//:org_http4s_http4s_client"),
        add_scala_ver("@maven//:org_typelevel_vault"),

        #munit
        add_scala_ver("@maven//:org_scalameta_munit"),
        add_scala_ver("@maven//:org_typelevel_munit_cats_effect_3"),

        # GCS
        "@maven//:com_google_auth_google_auth_library_oauth2_http",
        "@maven//:com_google_auth_google_auth_library_credentials",

        "//src/main/scala/tray",
        "//src/main/scala/tray/auth",
    ],
)
