load("//:dependencies.bzl", "add_scala_ver")
load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")

scala_library(
    name = "auth",
    srcs = glob(["*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        # CE
        add_scala_ver("@maven//:org_typelevel_cats_kernel"),
        add_scala_ver("@maven//:org_typelevel_cats_core"),
        add_scala_ver("@maven//:org_typelevel_cats_effect_kernel"),
        add_scala_ver("@maven//:org_typelevel_cats_effect"),

        # GCS
        "@maven//:com_google_auth_google_auth_library_oauth2_http",
        "@maven//:com_google_auth_google_auth_library_credentials",
    ],
)
