load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")
load("@scala_things//:flags/flags.bzl", "flags")

scala_library(
    name = "auth",
    srcs = glob(["*.scala"]),
    scalacopts = flags,
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:org_typelevel_cats_core_2_13",
        "@maven//:org_typelevel_cats_effect_kernel_2_13",
        "@maven//:org_typelevel_cats_effect_2_13",

        #http4s
        "@maven//:org_http4s_http4s_core_2_13",
        "@maven//:org_typelevel_case_insensitive_2_13",

        # GCS
        "@maven//:com_google_auth_google_auth_library_oauth2_http",
        "@maven//:org_scala_lang_scala_library_2_13_6"
    ],
)
