load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")
load("@scala_things//:flags/flags.bzl", "flags", "unused_targets_ignored")

scala_library(
    name = "endpoints",
    srcs = glob(["*.scala"]),
    scalacopts = flags,
    unused_dependency_checker_ignored_targets = unused_targets_ignored("2_13")["http4s_uri_macro"],
    visibility = ["//visibility:public"],
    deps = [
        #cats
        "@maven//:org_typelevel_cats_kernel_2_13",
        "@maven//:org_typelevel_cats_core_2_13",
        "@maven//:org_typelevel_cats_parse_2_13",

        #fs2
        "@maven//:co_fs2_fs2_core_2_13",

        #https
        "@maven//:org_http4s_http4s_core_2_13",
        "@maven//:org_http4s_http4s_dsl_2_13",
        "@maven//:org_typelevel_literally_2_13",
        "@maven//:com_comcast_ip4s_core_2_13",
        "@maven//:org_typelevel_case_insensitive_2_13",
    ],
)
