load("//:third_party.bzl", "importable")
load("@bazel_skylib//lib:collections.bzl", "collections")

package(default_visibility = ["//visibility:public"])

scala_library(
    name = "gcs-auth",
    srcs = glob(["*.scala"]),
    deps = collections.uniq(
        importable["cats-effect"] +
        importable["google-auth-library-oauth2-http"],
    ),
)
