load("//:third_party.bzl", "importable")
load("@bazel_skylib//lib:collections.bzl", "collections")

package(default_visibility = ["//visibility:public"])

scala_library(
    name = "gcs-serde",
    srcs = glob(["*.scala"]),
    deps = collections.uniq(
        importable["circe-core"] +
        importable["circe-generic"],
    ),
)
